--- a/css.css
+++ b/css.css
@@ -3,6 +3,7 @@ body{
 /*color: white;*/
 text-align: center;
 box-sizing: border-box;
+
 }
 
 p{
@@ -11,7 +12,12 @@ p{
 	padding: 10px 10px 10px 10px;
 }
 
-a{
+a {
+	color: black;
+	text-decoration: none;
+}
+
+.start{
 	text-decoration: none;
 	/*text-align: center;*/
 	border: 1px black solid;
@@ -29,31 +35,31 @@ h1{
 .initial{
 	/*text-align: center;*/
 	border: 1px black solid;
-	margin: 10px 10px 10px 10px;
+	margin: 100px 10px 10px 10px;
 	padding: 10px 10px 10px 10px;
 }
 
 h2{
 	border: 1px black solid;
-	margin-top:220px;
+	margin-top:60px;
 	font-size: 3em;
 }
 
-
-
-.tiles{
-
+.tiles {
 	border: 1px black solid;
+	display: inline-block;
+	width:100px;
+	height: 100px;
+	text-align: center;
+	float:left;
+	margin:2px 2px 2px 2px;
 	font-size: 3em;
-
-
-
 }
 
 .jumbotron{
 border: 1px black solid;
-width:800px;
-height: 900px;
+width:430px;
+height: 425px;
 margin:auto;
 padding: 10px 10px 10px 10px;
 
@@ -66,16 +72,10 @@ padding: 10px 10px 10px 10px;
 }
 
 /* Aligning 4x4 Grid*/
-.grid {
-	width:18%;
- 	height:19%;
- 	margin:10px 10px 10px 10px;
- 	display: inline-grid;
-	position: relative;
-}
+
 .status-bar{
 	border: 1px black solid;
-	width: 720px;
+	width: 450px;
 	margin: auto;
 	height: 35px;
 	margin-top:5px;
@@ -98,4 +98,10 @@ padding: 10px 10px 10px 10px;
 }
 
 
-
+#help{
+	border: 1px black solid;
+	padding : 5px 10px 0px 10px;
+	display: block;
+	margin-top: 12px;
+	margin-right:380px;
+}
