--- a/css.css
+++ b/css.css
@@ -60,21 +60,21 @@ div.status-bar{
 #rating_box{
 	font-size: 1.3em;
 	margin-top:5px;
-	color: #262529;	
+	color: #262529;
 	display: inline-block;
 }
 
 #game-box{
 	display: none;
 	background: rgb(157,196,226);
-	background: linear-gradient(90deg, rgba(157,196,226,1) 22%, rgba(171,170,212,1) 57%, rgba(192,170,196,1) 90%); 
+	background: linear-gradient(90deg, rgba(157,196,226,1) 22%, rgba(171,170,212,1) 57%, rgba(192,170,196,1) 90%);
 }
 
 .tiles {
 	border: 1px #24fe30 solid;
 	border-radius: 20px 20px 20px 20px;
 	background: rgb(70,252,80);
-	background: linear-gradient(121deg, rgba(70,252,80,0.7497198708584997) 0%, rgba(69,158,232,0.8701680501302084) 100%); 
+	background: linear-gradient(121deg, rgba(70,252,80,0.7497198708584997) 0%, rgba(69,158,232,0.8701680501302084) 100%);
 	display: inline-block;
 	width:100px;
 	height: 100px;
@@ -105,17 +105,17 @@ div.game-end{
 	height: 50%;
 	overflow: auto;
 	background: rgb(176,252,255);
-	background: linear-gradient(121deg, rgba(176,252,255,1) 19%, rgba(215,255,223,1) 84%); 
+	background: linear-gradient(121deg, rgba(176,252,255,1) 19%, rgba(215,255,223,1) 84%);
 }
 
 /*Anchor Tags and RELATED SELECTORS*/
 a {
-	
+
 	text-decoration: none;
 }
 
 .start{
-	
+
 	cursor: crosshair;
 	display: block;
 	color : #37363e;
@@ -174,7 +174,7 @@ span.titles{
 	text-shadow: 1px 1px black;
 	box-shadow: 1px 1px #c8a4f7;
 	padding:3px 6px 3px 6px;
-	border-radius: 3px 3px 3px 3px; 
+	border-radius: 3px 3px 3px 3px;
 	font-size: .6em;
 	display: inline;
 	margin:10px 10px 10px 10px;
@@ -188,7 +188,7 @@ span.titles{
 	animation-duration: 0.05s;
 	animation-timing-function: ease-in;
 	animation-direction: normal;
-	animation-iteration-count: 4; 
+	animation-iteration-count: 4;
 }
 
 /*Class that impliments flipping of an object in reverse direction*/
@@ -220,7 +220,7 @@ span.titles{
 }
 
 /*For Game Icons */
-i.gicons{	
+i.gicons{
 	padding : 10px 8px 10px 8px;
 	margin-top:5px
 }
@@ -237,7 +237,7 @@ h1{
 }
 
 h2{
-	
+
 	margin-top:30px;
 	font-size: 2.5em;
 }
@@ -245,7 +245,9 @@ h2{
 /*Footer And Related Selectors*/
 footer{
 	border: 1px black solid;
+	padding-top: 10px;
     width: 100%;
+    font-size: 0.8em;
     color: #c4c3ca;
 	background-color: #262529;
 }
@@ -271,7 +273,7 @@ footer div a:hover{
 	width: 80%;
 	height: 60%;
 	perspective: 1000px;
-	
+
 }
 
 .start{
@@ -306,7 +308,7 @@ span.bar-items {
 	font-size: 1.3em;
 	margin-top:5px;
 	color: #262529;
-		
+
 }
 
 .tiles{
@@ -353,7 +355,12 @@ span.bar-items {
 
 }
 
-
+@media(min-width: 990px) {
+	footer{
+		position: absolute;
+		bottom: 0px;
+	}
+}
 
 
 
